docs.kosli.com/content/legacy_ref/v2.11.10/kosli_archive_attestation-type.md
---
title: "kosli archive attestation-type"
beta: false
deprecated: false
summary: "Archive a custom Kosli attestation type."
---

# kosli archive attestation-type

## Synopsis

Archive a custom Kosli attestation type.
New custom attestations using this type cannot be made, but existing attestations will still be visible.


```shell
kosli archive attestation-type TYPE-NAME [flags]
```

## Flags
| Flag | Description |
| :--- | :--- |
|    -D, --dry-run  |  [optional] Run in dry-run mode. When enabled, no data is sent to Kosli and the CLI exits with 0 exit code regardless of any errors.  |
|    -h, --help  |  help for attestation-type  |


## Flags inherited from parent commands
| Flag | Description |
| :--- | :--- |
|    -a, --api-token string  |  The Kosli API token.  |
|    -c, --config-file string  |  [optional] The Kosli config file path. (default "kosli")  |
|        --debug  |  [optional] Print debug logs to stdout. A boolean flag https://docs.kosli.com/faq/#boolean-flags (default false)  |
|    -H, --host string  |  [defaulted] The Kosli endpoint. (default "https://app.kosli.com")  |
|        --http-proxy string  |  [optional] The HTTP proxy URL including protocol and port number. e.g. 'http://proxy-server-ip:proxy-port'  |
|    -r, --max-api-retries int  |  [defaulted] How many times should API calls be retried when the API host is not reachable. (default 3)  |
|        --org string  |  The Kosli organization.  |


## Examples Use Cases

**archive a Kosli custom attestation type**

```shell
kosli archive attestation-type yourAttestationTypeName \
	--api-token yourAPIToken \
	--org yourOrgName
```

